# tg-bot-template

./: .env.example  .gitignore  Dockerfile  INSTALLATION.md  MANIFEST.in  PROJECT_CREATION_GUIDE.md  QUICKSTART.md  README.md  SECRETS_ARCHITECTURE.md  SECRETS_SETUP.md  alembic.ini  bot_factory.py  cookiecutter.json  create_bot.py  docker-compose.yml  mcp_bot_creator.py  pyproject.toml  requirements.txt  secrets.example.yaml  test_simple_template.py
.clinerules/: python-telegram-bot-rules.md
.github/workflows/: backup_workflow.yml  cd-test.yml  ci-deploy.yml  db_backup.yml  deploy.yml  initial_server_setup.yml  secrets-config.yml
.github/workflows/templates/: ci.yml.j2  deploy.yml.j2
alembic/: env.py
deployment/: README.md  backup-db.sh  deploy.sh  health-check.sh  rollback.sh
deployment/config/: deploy.conf
deployment/templates/: bot.service.template
examples/: simple_bot_template.py
hooks/: post_gen_project.py
locales/: en.json  es.json
migrations/: env.py
scripts/: SECRETS_README.md  __init__.py  manage-org-secrets.py  manage-project-secrets.py  requirements-secrets.txt  secrets-config.yml  setup-all-secrets.py  setup_secrets.py
telegram_bot_template/: __init__.py  main.py
telegram_bot_template/config/: __init__.py  settings.py
telegram_bot_template/core/: __init__.py  ai_provider.py  bot.py  database.py  keyboard_manager.py  locale_manager.py  migration_manager.py
telegram_bot_template/handlers/: __init__.py  basic.py  message.py
telegram_bot_template/models/: __init__.py  base.py  users.py
telegram_bot_template/support/: __init__.py  bot.py
telegram_bot_template/utils/: __init__.py  helpers.py
tests/: conftest.py  test_config.py  test_cookiecutter_template.py  test_simple_template.py  test_utils.py
tg_bot_template.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tg_bot_template_cli/: __init__.py  bot_factory.py  cli.py  create_bot.py  mcp_bot_creator.py
{{ cookiecutter.project_slug }}/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml  deploy.yml
{{ cookiecutter.project_slug }}/alembic/versions/: 001_initial_users_table.py
{{ cookiecutter.project_slug }}/config/: __init__.py
{{ cookiecutter.project_slug }}/core/: database.py  keyboard_manager.py  migration_manager.py
{{ cookiecutter.project_slug }}/deployment/: deploy.sh  setup.sh  {{ cookiecutter.project_slug }}.service
{{ cookiecutter.project_slug }}/handlers/: __init__.py
{{ cookiecutter.project_slug }}/locales/: ru.json
{{ cookiecutter.project_slug }}/migrations/: env.py
{{ cookiecutter.project_slug }}/src/: cli.py  main.py
{{ cookiecutter.project_slug }}/src/core/: __init__.py  ai_provider.py  locale_manager.py
{{ cookiecutter.project_slug }}/src/support/: __init__.py
{{ cookiecutter.project_slug }}/src/utils/: __init__.py
{{ cookiecutter.project_slug }}/tests/: __init__.py  test_bot.py
{{ cookiecutter.project_slug }}/utils/: helpers.py
